<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
    <string name="app_name">Popularin</string>

    <!-- Safe -->
    <string name="account">Akun</string>
    <string name="add">Buat</string>
    <string name="add_review">Buat Ulasan</string>
    <string name="added_to_favorite">Film di tambahkan ke favorit</string>
    <string name="added_to_watchlist">Film di tambahkan ke watchlist</string>
    <string name="airing">Tayang</string>
    <string name="all">Semua</string>
    <string name="bio">Bio</string>
    <string name="cast">Pemain</string>
    <string name="comment">Komen</string>
    <string name="comment_added">Komen terkirim</string>
    <string name="comment_deleted">Komen dihapus</string>
    <string name="confirm_password">Konfirmasi Sandi</string>
    <string name="credit">Kredit</string>
    <string name="crew">Kru</string>
    <string name="current_password">Kata Sandi Lama</string>
    <string name="delete">Hapus</string>
    <string name="detail">Detail</string>
    <string name="edit">Ubah</string>
    <string name="edit_password">Ubah Kata Sandi</string>
    <string name="edit_password_welcome">Hei,\nButuh sandi baru?</string>
    <string name="edit_profile">Ubah Profil</string>
    <string name="edit_profile_welcome">Hei,\nAda yang salah?</string>
    <string name="edit_review">Ubah Ulasan</string>
    <string name="email">Email</string>
    <string name="empty_account">Masuk atau daftar terlebih dahulu untuk\nmenikmati semua fitur Popularin!</string>
    <string name="empty_self_favorite">Kamu belum mempunyai film favorit.</string>
    <string name="empty_self_watchlist">Kamu belum mempunyai daftar film\nyang ingin ditonton.</string>
    <string name="empty_comment">Belum ada komen untuk ulasan ini.\nMau jadi yang pertama?</string>
    <string name="empty_credit_film_as_cast">Belum membintangi film apapun.</string>
    <string name="empty_credit_film_as_crew">Belum membuat film apapun.</string>
    <string name="empty_film_airing">Film yang sedang tayang di bioskop\nakan tampil di sini.</string>
    <string name="empty_film_favorite">Belum ada yang memfavoritkan film ini.\nMau jadi yang pertama?</string>
    <string name="empty_film_favorite_from_following">Belum ada teman mu yang memfavoritkan film ini.</string>
    <string name="empty_film_review">Belum ada yang mengulas film ini.</string>
    <string name="empty_film_review_from_following">Belum ada teman mu yang mengulas film ini.</string>
    <string name="empty_film_watchlist">Belum ada yang ingin menonton film ini.\nMau jadi yang pertama?</string>
    <string name="empty_film_watchlist_from_following">Belum ada teman mu yang ingin menonton film ini.</string>
    <string name="empty_follower">Pengguna belum mempunyai pengikut.</string>
    <string name="empty_following">Pengguna belum mengikuti siapapun.</string>
    <string name="empty_liked_film_review">Belum ada ulasan dari film ini yang kamu sukai.</string>
    <string name="empty_mutual">Belum ada pengguna yang bermutual.</string>
    <string name="empty_overview">Belum ada sinopsis untuk film ini.</string>
    <string name="empty_review">Ulasan dari semua pengguna Popularin\nakan tampil di sini.</string>
    <string name="empty_review_like">Belum ada yang menyukai ulasan ini.\nMau jadi yang pertama?</string>
    <string name="empty_review_like_from_following">Belum ada teman mu yang menyukai ulasan ini.</string>
    <string name="empty_timeline">Ulasan dari pengguna yang kamu ikuti\nakan tampil di sini.</string>
    <string name="empty_trailer">Belum ada trailer untuk film ini.</string>
    <string name="empty_user_favorite">Pengguna belum mempunyai film favorit.</string>
    <string name="empty_self_review">Kamu belum mempunyai ulasan.</string>
    <string name="empty_self_film_review">Belum ada ulasan dari kamu untuk film ini.</string>
    <string name="empty_user_review">Pengguna belum mempunyai ulasan.</string>
    <string name="empty_user_watchlist">Pengguna belum mempunyai daftar film\nyang ingin ditonton.</string>
    <string name="failed_add_comment">Gagal memberi komen</string>
    <string name="failed_add_review">Gagal membuat ulasan</string>
    <string name="failed_add_to_favorite">gagal ditambahkan ke favorit</string>
    <string name="failed_add_to_watchlist">gagal ditambahkan ke watchlist</string>
    <string name="failed_delete_comment">Komen gagal dihapus</string>
    <string name="failed_delete_review">Ulasan gagal dihapus</string>
    <string name="failed_follow_user">Gagal mengikuti pengguna</string>
    <string name="failed_like_review">Gagal menyukai ulasan</string>
    <string name="failed_unfollow_user">Gagal berhenti mengikuti pengguna</string>
    <string name="failed_unlike_review">Gagal tidak menyukai ulasan</string>
    <string name="failed_remove_from_favorite">gagal dihapus dari favorit</string>
    <string name="failed_remove_from_watchlist">gagal dihapus dari watchlist</string>
    <string name="failed_retrieve_metadata">Gagal mendapatkan metadata film</string>
    <string name="failed_sign_in">Gagal untuk masuk</string>
    <string name="failed_sign_out">Gagal untuk keluar</string>
    <string name="failed_sign_up">Gagal untuk mendaftar</string>
    <string name="failed_update_password">Gagal mengubah kata sandi</string>
    <string name="failed_update_profile">Gagal mengubah profil</string>
    <string name="failed_update_review">Gagal mengubah ulasan</string>
    <string name="favorite">Favorit</string>
    <string name="favorited_by">Di Favoritkan Oleh</string>
    <string name="film">Film</string>
    <string name="first_name">Nama Depan</string>
    <string name="follow">Ikuti</string>
    <string name="follow_me">Mengikuti Kamu</string>
    <string name="follower">Pengikut</string>
    <string name="following">Mengikuti</string>
    <string name="full_name">Nama Lengkap</string>
    <string name="genre">Genre</string>
    <string name="genre_action">Aksi</string>
    <string name="genre_adventure">Petualangan</string>
    <string name="genre_animation">Animasi</string>
    <string name="genre_comedy">Komedi</string>
    <string name="genre_crime">Kejahatan</string>
    <string name="genre_documentary">Dokumenter</string>
    <string name="genre_drama">Drama</string>
    <string name="genre_family">Keluarga</string>
    <string name="genre_fantasy">Fantasi</string>
    <string name="genre_fiction">Fiksi</string>
    <string name="genre_history">Sejarah</string>
    <string name="genre_horror">Horor</string>
    <string name="genre_mystery">Misteri</string>
    <string name="genre_romance">Romansa</string>
    <string name="genre_thriller">Thriller</string>
    <string name="genre_war">Perang</string>
    <string name="home">Home</string>
    <string name="input_comment_hint">Masukkan komen...</string>
    <string name="input_review">Masukkan ulasan...</string>
    <string name="invalid_credentials">Username atau kata sandi salah</string>
    <string name="invalid_current_password">Kata sandi lama mu salah, coba periksa lagi ya!</string>
    <string name="last_name">Nama Belakang</string>
    <string name="like">Suka?</string>
    <string name="liked">Disukai</string>
    <string name="liked_by">Disukai Oleh</string>
    <string name="loading">Tunggu Ya...</string>
    <string name="metadata">Metadata</string>
    <string name="mutual">Mutual</string>
    <string name="network_error">Coba periksa koneksi internet mu ya!</string>
    <string name="new_password">Kata Sandi Baru</string>
    <string name="not_found">UH OH!\nApa yang kamu cari tidak ditemukan.</string>
    <string name="overview">Sinopsis</string>
    <string name="password">Kata Sandi</string>
    <string name="press_once_more_to_exit">Klik sekali lagi untuk keluar</string>
    <string name="profile">Profil</string>
    <string name="rating">Rating</string>
    <string name="recent_favorite">Favorit Terbaru</string>
    <string name="recent_review">Ulasan Terbaru</string>
    <string name="removed_from_favorite">Film di hapus dari favorit</string>
    <string name="removed_from_watchlist">Film di hapus dari watchlist</string>
    <string name="retry">Coba Lagi</string>
    <string name="review">Ulasan</string>
    <string name="review_added">Ulasan dibuat</string>
    <string name="review_deleted">Ulasan di hapus</string>
    <string name="review_liked">Ulasan disukai</string>
    <string name="review_unliked">Ulasan tidak disukai</string>
    <string name="review_updated">Ulasan di ubah</string>
    <string name="runtime">Durasi</string>
    <string name="save_password">Simpan Kata Sandi</string>
    <string name="save_profile">Simpan Profil</string>
    <string name="search">Cari</string>
    <string name="search_hint">Cari apa?</string>
    <string name="search_film_hint">Judul film...</string>
    <string name="search_user_hint">Nama atau username...</string>
    <string name="self">Saya</string>
    <string name="sign_in">Masuk</string>
    <string name="sign_in_welcome">Halo,\nSelamat Datang!</string>
    <string name="sign_out">Keluar</string>
    <string name="sign_up">Daftar</string>
    <string name="sign_up_welcome">Halo,\nSelamat Bergabung!</string>
    <string name="social">Sosial</string>
    <string name="total">Total</string>
    <string name="un_sync_auth">Akun tidak sinkron dengan database.\nSilahkan keluar dan masuk kembali.</string>
    <string name="user">Pengguna</string>
    <string name="user_followed">Pengguna diikuti</string>
    <string name="user_unfollowed">Berhenti mengikuti pengguna</string>
    <string name="username">Username</string>
    <string name="validate_alpha_dash">Username tidak bisa mengandung spasi</string>
    <string name="validate_email_format">Format alamat email tidak sesuai</string>
    <string name="validate_new_password_match_current_password">Kata sandi baru dan lama harus berbeda</string>
    <string name="validate_username_match_password">Kata sandi dan username harus berbeda</string>
    <string name="validate_new_password_length">Kata sandi baru minimal 8 karakter</string>
    <string name="validate_password_length">Kata sandi minimal 8 karakter</string>
    <string name="validate_rating">Rating harus di isi</string>
    <string name="validate_review">Ulasan harus di isi</string>
    <string name="validate_confirm_password_un_match_new_password">Kata sandi baru dan konfirmasi tidak sama</string>
    <string name="validate_username_length">Username minimal 5 karakter</string>
    <string name="watch_date">Tanggal Tonton</string>
    <string name="watchlist">Watchlist</string>
    <string name="watchlisted_by">Ingin di Tonton Oleh</string>
    <string name="zero_favorite">0 Favorit</string>
    <string name="zero_rating">0/5</string>
    <string name="zero_review">0 Ulasan</string>
    <string name="zero_watchlist">0 Watchlist</string>

    <string name="invalid_password">Kata sandi mu salah, coba periksa lagi ya!</string>
    <string name="username_not_found">Username tidak terdaftar, coba periksa lagi ya!</string>
    <string name="general_error">Gagal mengirim permintaanmu, coba beberapa saat lagi ya!</string>
    <string name="server_error">Ada kesalahan dalam server, coba beberapa saat lagi ya!</string>
    <string name="film_self_error">Gagal mendapatkan status film, coba beberapa saat lagi ya!</string>
    <string name="add_favorite_error">Gagal menambahkan ke dalam favorit, coba beberapa saat lagi ya!</string>
    <string name="delete_favorite_error">Gagal menghapus dari favorit, coba beberapa saat lagi ya!</string>
    <string name="add_watchlist_error">Gagal menambahkan ke dalam watchlist, coba beberapa saat lagi ya!</string>
    <string name="delete_watchlist_error">Gagal menghapus dari watchlist, coba beberapa saat lagi ya!</string>
    <string name="empty_search_result">UPS! Apa yang kamu cari tidak ditemukan.</string>
</resources>
