<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/anchor_aer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.EditReviewActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_aer_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:menu="@menu/add_review"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/edit_review" />

    <ProgressBar
        android:id="@+id/pbr_aer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_aer_layout"
        android:padding="168dp" />

    <TextView
        android:id="@+id/text_aer_network_error"
        style="@style/TextMessagePrimary"
        android:layout_below="@id/toolbar_aer_layout"
        android:text="@string/not_found"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/edit_review_aer_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar_aer_layout"
        android:orientation="vertical"
        android:visibility="gone">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:id="@+id/text_aer_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="16dp"
                android:layout_toStartOf="@+id/sov_aer_anchor"
                android:ellipsize="end"
                android:fontFamily="@font/jost_medium"
                android:maxLines="1"
                android:textColor="@color/colorOnBackground"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/text_aer_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_aer_title"
                android:layout_alignParentStart="true"
                android:layout_marginTop="4dp"
                android:fontFamily="@font/jost_regular"
                android:textSize="15sp" />

            <com.github.florent37.shapeofview.shapes.RoundRectView
                android:id="@+id/sov_aer_anchor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                app:shape_roundRect_borderColor="@color/colorPrimary"
                app:shape_roundRect_borderWidth="0.1dp"
                app:shape_roundRect_bottomLeftRadius="5dp"
                app:shape_roundRect_bottomRightRadius="5dp"
                app:shape_roundRect_topLeftRadius="5dp"
                app:shape_roundRect_topRightRadius="5dp">

                <ImageView
                    android:id="@+id/image_aer_poster"
                    android:layout_width="40dp"
                    android:layout_height="60dp"
                    android:background="@color/colorSurface"
                    android:contentDescription="@null" />
            </com.github.florent37.shapeofview.shapes.RoundRectView>
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="16dp"
            android:background="@color/grayPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/text_aer_watch_date"
                android:fontFamily="@font/jost_regular"
                android:text="@string/watch_date"
                android:textColor="@color/colorOnBackground"
                android:textSize="15sp" />

            <TextView
                android:id="@+id/text_aer_watch_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:fontFamily="@font/jost_regular"
                android:textColor="@color/colorOnBackground"
                android:textSize="15sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="16dp"
            android:background="@color/grayPrimary" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:paddingHorizontal="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_toStartOf="@id/rbr_aer_layout"
                android:fontFamily="@font/jost_regular"
                android:text="@string/rating"
                android:textColor="@color/colorOnBackground"
                android:textSize="15sp" />

            <RatingBar
                android:id="@+id/rbr_aer_layout"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:numStars="5"
                android:stepSize="0.5" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_marginTop="16dp"
            android:background="@color/grayPrimary" />

        <EditText
            android:id="@+id/input_aer_review"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="@null"
            android:background="@color/colorBackground"
            android:fontFamily="@font/jost_regular"
            android:gravity="top"
            android:hint="@string/input_review"
            android:inputType="textMultiLine"
            android:isScrollContainer="true"
            android:padding="16dp"
            android:textColor="@color/colorOnBackground" />
    </LinearLayout>

</RelativeLayout>